--- a/client/main.html
+++ b/client/main.html
@@ -15,22 +15,7 @@
     <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.7/semantic.min.js"></script>
   </head>
   <body>
-    <div class="ui container" style="margin: 10%">
-      <div class="ui grid container centered">
-        <form class="ui form" id="login-form">
-          <h1>Login</h1><hr>
-          <div class="field">
-            <label>Username</label>
-            <input name="username" placeholder="Username" type="text">
-          </div>
-          <div class="field">
-            <label>Password</label>
-            <input name="password" placeholder="Password" type="password">
-          </div>
-          <button class="ui button" type="submit">Submit</button>
-        </form>
-      </div>
-    </div>
-    <script src="index.js"></script>
+
   </body>
+  <script src="main.js"></script>
 </html>
