--- a/client/answer.html
+++ b/client/answer.html
@@ -30,10 +30,17 @@
         <div class="ui grid row">
 
           <div class="ui grid two wide column centered">
-            <h3 style="color:gray;">11</h3>
-            <p>votes</p>
-            <h3 style="color:gray;">3</h3>
-            <p>answers</p>
+
+            <button class="ui circular icon button">
+              <i class="chevron up icon"></i>
+            </button>
+            <button class="ui button" style="background-color:white">6</button>
+            <button class="ui circular icon button">
+              <i class="chevron down icon"></i>
+            </button>
+
+
+
           </div>
 
           <div class="fourteen wide column">
@@ -51,41 +58,85 @@
 
         <div class="container padded">
           <div class="ui comments">
-            <div class="comment">
-              <a class="avatar">
-                <img src="https://i.stack.imgur.com/Q6M8I.jpg?s=32&g=1">
-              </a>
-              <div class="content">
-                <a class="author">Joe Henderson</a>
-                <div class="metadata">
-                  <div class="date">1 day ago</div>
-                </div>
-                <div class="text">
-                  <p>The hours, minutes and seconds stand as visible reminders that your effort put them all there. </p>
-                  <p>Preserve until your next run, when the watch lets you see how Impermanent your efforts are.</p>
-                </div>
-                <div class="actions">
-                  <a class="reply">add a comment</a>
+            <div class="ui grid row">
+
+              <div class="ui grid two wide column centered">
+
+                <button class="ui circular icon button">
+                  <i class="chevron up icon"></i>
+                </button>
+                <button class="ui button" style="background-color:white">24</button>
+                <button class="ui circular icon button">
+                  <i class="chevron down icon"></i>
+                </button>
+
+
+
+              </div>
+
+              <div class="fourteen wide column">
+                <div class="comment">
+                  <a class="avatar">
+                    <img src="https://i.stack.imgur.com/Q6M8I.jpg?s=32&g=1">
+                  </a>
+                  <div class="content">
+                    <a class="author">Joe Henderson</a>
+                    <div class="metadata">
+                      <div class="date">1 day ago</div>
+                    </div>
+                    <div class="text">
+                      <p>The hours, minutes and seconds stand as visible reminders that your effort put them all there. </p>
+                      <p>Preserve until your next run, when the watch lets you see how Impermanent your efforts are.</p>
+                    </div>
+                    <div class="actions">
+                      <a class="reply">add a comment</a>
+                    </div>
+                  </div>
                 </div>
               </div>
+
+
             </div>
-            <div class="comment">
-              <a class="avatar">
-                <img src="https://i.stack.imgur.com/Oz2dx.jpg?s=32&g=1">
-              </a>
-              <div class="content">
-                <a class="author">Christian Rocha</a>
-                <div class="metadata">
-                  <div class="date">2 days ago</div>
-                </div>
-                <div class="text">
-                  I re-tweeted this.
-                </div>
-                <div class="actions">
-                  <a class="reply">add a comment</a>
+
+            <div class="ui grid row">
+
+              <div class="ui grid two wide column centered">
+
+                <button class="ui circular icon button">
+                  <i class="chevron up icon"></i>
+                </button>
+                <button class="ui button" style="background-color:white">1</button>
+                <button class="ui circular icon button">
+                  <i class="chevron down icon"></i>
+                </button>
+
+
+
+              </div>
+
+              <div class="fourteen wide column">
+                <div class="comment">
+                  <a class="avatar">
+                    <img src="https://i.stack.imgur.com/Oz2dx.jpg?s=32&g=1">
+                  </a>
+                  <div class="content">
+                    <a class="author">Christian Rocha</a>
+                    <div class="metadata">
+                      <div class="date">2 days ago</div>
+                    </div>
+                    <div class="text">
+                      I re-tweeted this.
+                    </div>
+                    <div class="actions">
+                      <a class="reply">add a comment</a>
+                    </div>
+                  </div>
                 </div>
               </div>
+
+
             </div>
+
 
             <form class="ui reply form">
               <h3>Your Answer</h3>
