--- a/client/main.html
+++ b/client/main.html
@@ -15,7 +15,18 @@
     <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.7/semantic.min.js"></script>
   </head>
   <body>
-
+    <div class="ui container">
+      <table class="ui celled padded table">
+        <thead>
+          <th>Title</th>
+          <th>Question</th>
+          <th>Answers</th>
+          <th>UpVotes</th>
+          <th>DownVotes</th>
+        </thead>
+        <tbody id="list-of-questions"></tbody>
+      </table>
+    </div>
   </body>
   <script src="main.js"></script>
 </html>
