--- a/client/example.html
+++ b/client/example.html
@@ -3,6 +3,8 @@
   <head>
     <link rel="stylesheet" type="text/css" href=https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.7/semantic.css>
     <meta charset="utf-8">
+    <script src="//cloud.tinymce.com/stable/tinymce.min.js"></script>
+    <script>tinymce.init({ selector:'textarea' });</script>
     <link rel="stylesheet" href="css/style.css">
     <title></title>
   </head>
