--- a/client/example.html
+++ b/client/example.html
@@ -9,27 +9,35 @@
     <title></title>
   </head>
   <body>
-    <div class="ui text container">
-      <div class="ui padded grid row KEPALA">
-        <div class="one wide column">
-          <img src="http://hammerjs.github.io/assets/img/stackoverflow-icon.svg" alt="" style="width:200%;">
-        </div>
-        <div class="ten wide column">
-          <p style="font-size:30px">stack<b>overflow</b> <span style="color:gray;font-size:70%;">Question and Answer</span></p >
-        </div>
-        <div class="five wide column">
-          <div class="ui icon input">
-            <input type="text" placeholder="Search...">
-            <i class="search icon"></i>
+    <div class="ui grid row">
+      <div class="four wide column">
+
+      </div>
+      <div class="six wide column">
+        <div class="ui text container">
+          <div class="ui padded grid row KEPALA">
+            <div class="one wide column">
+              <img src="http://hammerjs.github.io/assets/img/stackoverflow-icon.svg" alt="" style="width:200%;">
+            </div>
+            <div class="ten wide column">
+              <p style="font-size:30px">stack<b>overflow</b> <span style="color:gray;font-size:70%;">Question and Answer</span></p >
+            </div>
+            <div class="five wide column">
+              <div class="ui icon input">
+                <input type="text" placeholder="Search...">
+                <i class="search icon"></i>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <h3>Submit Question</h3>
           </div>
         </div>
       </div>
-      <div class="row">
-        <h3>Submit Question</h3>
-      </div>
     </div>
+
     <div class="ui grid row">
-      <div class="five wide column">
+      <div class="four wide column">
         <p></p>
         <p></p>
         <p></p>
