--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,126 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Login Page</title>
-  </head>
-  <body>
+  <html>
+    <head>
+      <title>Login Page</title>
+      <!--Import Google Icon Font-->
+      <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <!--Import materialize.css-->
+      <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
 
-  </body>
-</html>
+      <!--Let browser know website is optimized for mobile-->
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    </head>
+
+    <body>
+      <div class="container">
+        <div class="row" style="margin-top:100px">
+          <div class="col s6 offset-s3 center" >
+            <h5 class="teal-text text-darken-2" style="margin-bottom: 50px;">Join Stackoverflow community now</h5>
+            <div class="card" id="card_height">
+              <div class="card-content" style="padding-bottom:8px;">
+                <div id="login_message">
+                  <!-- <div class="card-panel teal lighten-2 col s12 message">abc</div> -->
+                </div>
+
+                <form id="login" class="col s12">
+                  <div class="row">
+                    <br>
+                    <div class="input-field col s10 offset-s1">
+                      <i class="material-icons prefix">account_circle</i>
+                      <input id="username" type="text" name="username" class="validate center">
+                      <label for="username">Username</label>
+                    </div>
+                    <div class="input-field col s10 offset-s1" style="margin-bottom:30px;">
+                      <i class="material-icons prefix">vpn_key</i>
+                      <input id="password" type="password" name="password" class="validate center">
+                      <label for="password">Password</label>
+                    </div>
+                    <div class="row">
+                      <button class="waves-effect waves-light btn" type="submit"><i class="material-icons left">input</i>Submit</button>
+                    </div>
+                  </div>
+                </form>
+                <span class="card-title activator orange-text text-darken-2 center" id="open_register" style="font-size:15px">Register Here</span>
+              </div>
+
+              <div class="card-reveal">
+                <span class="card-title grey-text text-darken-4" id="close_register"><i class="material-icons right">close</i></span>
+                <div id="register_message">
+                  <!-- <div class="card-panel teal lighten-2 col s10 message">abc</div> -->
+                </div>
+                <form id="input_register" class="col s12">
+                  <div class="row">
+                    <br>
+                    <div class="input-field col s10 offset-s1">
+                      <i class="material-icons prefix">account_circle</i>
+                      <input id="register_username" type="text" name="username" class="validate center">
+                      <label for="register_username">Username</label>
+                    </div>
+                    <div class="input-field col s10 offset-s1" style="margin-bottom:30px;">
+                      <i class="material-icons prefix">vpn_key</i>
+                      <input id="register_password" type="password" name="password" class="validate center">
+                      <label for="register_password">Password</label>
+                    </div>
+                    <div class="row">
+                      <button class="waves-effect waves-light btn" id="register_submit" type="submit"><i class="material-icons left">input</i>Register</button>
+                    </div>
+                  </div>
+                </form>
+              </div>
+              <div class="row">
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--Import jQuery before materialize.js-->
+      <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+      <script type="text/javascript" src="js/materialize.min.js"></script>
+      <script>
+        $('#open_register').click(function(){
+          $('#card_height').css('height', '450px')
+        })
+        $('#close_register').click(function(){
+          $('#card_height').css('height', '400px')
+          $('#register_message').html('')
+          $('#register_password').val('')
+          $('#register_username').val('')
+        })
+
+        $('#register_submit').click(function(e){
+          e.preventDefault()
+          $.ajax({
+            type: 'POST',
+            url: 'http://localhost:3000/api/users',
+            data: $('#input_register').serialize(),
+            dataType: 'json',
+            success: function(data){
+              $('#register_message').append(`<div class="card-panel teal lighten-2 col s10 message">${data.msg}</div>`)
+            }
+          })
+        })
+      </script>
+      <script>
+      $('#login').submit(function(e){
+        console.log($('#username').val());
+        console.log($('#password').val());
+        e.preventDefault()
+        $.ajax({
+          type: 'POST',
+          url: 'http://localhost:3000/api/users/signin',
+          data: {
+            username: $('#username').val(),
+            password: $('#password').val()
+          },
+          dataType: 'json',
+          success: function(data){
+            console.log(data);
+            // location.href = "http://127.0.0.1:8080/blog.html"
+            localStorage.setItem('jwt-token', data.token)
+          }
+        })
+      })
+      </script>
+    </body>
+  </html>
