simplify Votes into one table

--- a/client/main.html
+++ b/client/main.html
@@ -32,8 +32,7 @@
           <th class="three coloumn wide">Title</th>
           <th class="six coloumn wide">Question</th>
           <th class="one coloumn wide">Answers</th>
-          <th class="one coloumn wide">UpVotes</th>
-          <th class="one coloumn wide">DownVotes</th>
+          <th class="one coloumn wide">Votes</th>
         </thead>
         <tbody id="list-of-questions"></tbody>
       </table>
@@ -47,8 +46,7 @@
         <table class="ui celled padded table">
           <thead>
             <th class="ten coloumn wide">Answer</th>
-            <th class="one coloumn wide">Upvote</th>
-            <th class="one coloumn wide">downvote</th>
+            <th class="one coloumn wide">Votes</th>
           </thead>
           <tbody id="list-of-answers"></tbody>
         </table>
