debugging and human check e2e, updating readme

--- a/client/index.html
+++ b/client/index.html
@@ -19,13 +19,13 @@
       <div class="ui grid container centered">
         <form class="ui form" id="login-form">
           <h1>Login</h1><hr>
-          <div class="field">
+          <div class="required field">
             <label>Username</label>
-            <input name="username" placeholder="Username" type="text">
+            <input name="username" placeholder="Username" type="text" required>
           </div>
-          <div class="field">
+          <div class="required field">
             <label>Password</label>
-            <input name="password" placeholder="Password" type="password">
+            <input name="password" placeholder="Password" type="password" required>
           </div>
           <button class="ui button" type="submit">Submit</button>
         </form>
