--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
                       <label for="password">Password</label>
                     </div>
                     <div class="row">
-                      <button class="waves-effect waves-light btn" type="submit"><i class="material-icons left">input</i>Submit</button>
+                      <button class="waves-effect waves-light btn" id="login_button" type="submit"><i class="material-icons left">input</i>Submit</button>
                     </div>
                   </div>
                 </form>
@@ -101,22 +101,21 @@
           })
         })
       </script>
+
       <script>
-      $('#login').submit(function(e){
+      $('#login_button').click(function(e){
+        e.preventDefault()
+
         console.log($('#username').val());
         console.log($('#password').val());
-        e.preventDefault()
         $.ajax({
           type: 'POST',
           url: 'http://localhost:3000/api/users/signin',
-          data: {
-            username: $('#username').val(),
-            password: $('#password').val()
-          },
+          data: $('#login').serialize(),
           dataType: 'json',
           success: function(data){
             console.log(data);
-            // location.href = "http://127.0.0.1:8080/blog.html"
+            location.href = "http://127.0.0.1:8080/main.html"
             localStorage.setItem('jwt-token', data.token)
           }
         })
